# blockchain_node

./: .gitignore  CMakeLists.txt  README.md
src/: config.hpp  main.cpp
src/application_logic/: application_logic.cpp  application_logic.hpp
src/application_manager/: application_manager.cpp  application_manager.hpp
src/blockchain_storage/: blockchain_storage.cpp  blockchain_storage.hpp
src/communicator/: communicator.cpp  communicator.hpp
src/debug/logger/: logger.hpp
src/digital_signature_manager/: digital_signature_manager.cpp  digital_signature_manager.hpp
src/event_callbacks/: event_callbacks.cpp  event_callbacks.hpp
src/format_converter/: format_converter.cpp  format_converter.hpp
src/hasher/: hasher.cpp  hasher.hpp
src/json_operations/: json_operations.cpp  json_operations.hpp
src/message_serializer/: message_serializer.cpp  message_serializer.hpp
src/miner/: miner.cpp  miner.hpp
src/models/: block.h  blockchain_node_contact_info.hpp  models.h  transaction.h  transaction_in.hpp  transaction_out.hpp  transaction_web.h  tx_in_with_amount.hpp  wallet.h
src/rest_api_callbacks/: rest_api_callbacks.cpp  rest_api_callbacks.hpp
src/rest_api_server/: rest_api_server.cpp  rest_api_server.hpp
src/storage/: storage.cpp  storage.hpp
src/validator/: validator.cpp  validator.hpp
